feat: add authorization access based on the role